# clipstty

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  ENHANCED_SESSION_OUTPUTS.md  ENHANCED_TEST_RECORDER_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_SPECIFICATIONS.md  IMPROVED_TEST_RECORDER_SUMMARY.md  LICENSE  PHASE1_VOICE_COMMANDS_DOCUMENTATION.md  PHASE2_AUDIO_RECORDING_DOCUMENTATION.md  PROJECT_SUMMARY.md  PROJECT_TIMELINE.md  README.md  TECHNICAL_REQUIREMENTS.md  TEST_RECORDING_GUIDE.md  VOICE_DEVELOPMENT_CHECKLISTS.md  VOICE_INTERACTION_ROADMAP.md  feature_request.md  test_recording.py  test_tts_simple.rs  test_voice_commands.rs
.github/workflows/: ci.yml
debug_audio_sessions/sessions/2025/08/17/Debug_Audio_Test_5f3b3a95-60ab-4d90-9533-e2c120d7f476/: session_metadata.json
scripts/: build.sh
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  mod.rs  types.rs
src/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/services/: audio.rs  audio_archive.rs  audio_menu.rs  audio_playback.rs  audio_session_manager.rs  audio_storage.rs  clipboard.rs  hotkey.rs  mod.rs  paste.rs  session_transcript_tracker.rs  stt.rs  transcript_storage.rs  transcription_analytics.rs  transcription_deduplication.rs  transcription_log.rs  transcription_manager.rs  transcription_search.rs  tts.rs  vad.rs  voice_commands.rs
src/services/voice_commands/: audio_commands.rs  audio_recording_commands.rs  basic_commands.rs  comprehensive_registry.rs  context_manager.rs  session_tracking_commands.rs  stt_commands.rs  suggestion_engine.rs  system_commands.rs  testing_framework.rs  transcript_management_commands.rs
src/ui/: history_palette.rs  mod.rs  settings.rs  tray.rs
tests/: integration.rs
